Apply some Jul api changes and remove some deprecated api usage.